.gsd/exec/2355da4b-764c-4d95-95c1-3e889c46d2c3.stdout
   Compiling amux v0.2.0 (/home/huanglin/code/agent-workspace-tui)
error: `self` parameter is only allowed in associated functions
   --> src/app/handler.rs:297:32
    |
297 |     pub(super) fn handle_paste(&mut self, text: &str) -> Result<Action> {
    |                                ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error[E0401]: can't use `Self` from outer item
  |
  = note: nested items are independent from their parent item for everything except for privacy and name resolution
help: refer to the type directly here instead
 --> src/lib.rs:1:1
  |
1 | super::Apppub mod app;
  | ++++++++++

warning: unused imports: `KeyCode`, `KeyEvent`, and `KeyModifiers`
 --> src/app/mod.rs:8:31
